--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<html>
-    <head>
-        <title>welcome to my page</title>
-    </head>
-    <body>
-        <h1>welcome to my page</h1>
-            <P>here i will show you all my projects</p>
-                <h1>first project</h1>
-                <a href="cat app.html">click here for the project</a>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <h1>Welcome to my site</h1>
+    
+</body>
 </html>
